- Fixed bug #32699 (pg_affected_rows() was defined when it was not available).